--- a/WebContent/templates/modeloSitema.xhtml
+++ b/WebContent/templates/modeloSitema.xhtml
@@ -8,24 +8,28 @@
 <h:head>
 	<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1" />
 	<title>Emavv</title>
-	<h:outputStylesheet library="css" name="estilo.css"/>
-	<h:outputScript library="js" name="scripts.js"/>
+	<h:outputStylesheet library="css" name="estilo.css" />
+	<h:outputScript library="js" name="scripts.js" />
 </h:head>
+
 <h:body>
-	<p:growl id="msgGlobal" life="3000"  />
-	
 	<p:layout fullPage="true">
-		<p:layoutUnit position="north">
-			<i:insert name="menu"/>
+		<p:layoutUnit position="north" resizable="rue" >
+			<i:insert name="banner" />
 		</p:layoutUnit>
 		
-		<p:layoutUnit position="center">
-			<i:insert name="conteudo"/>
-		</p:layoutUnit>
-	</p:layout>
-	<script>
+		
+			<p:layoutUnit position="west" resizable="fasle" size="222">
+				<i:insert name="menu" />
+			</p:layoutUnit>
+
+			<p:layoutUnit position="center">
+				<i:insert name="conteudo" />
+			</p:layoutUnit>
+		</p:layout>
+
+		<script>
 		$(".ui-dialog").appendTo("body");
 	</script>
-
 </h:body>
 </html>
