--- a/WebContent/templates/modeloSitema.xhtml
+++ b/WebContent/templates/modeloSitema.xhtml
@@ -26,7 +26,7 @@
 					<div class="btnAtalhos">
 					
 						<p:commandButton  class="btn-icon"  image="teste" title="Icon Only"/>
-						<p:commandButton  class="btn-icon"  icon="ui-icon-disk" title="Icon Only" />
+						<p:commandButton  class="btn-icon"  icon="fa-home" title="Icon Only" />
 						<p:commandButton  class="btn-icon"  icon="ui-icon-disk" title="Icon Only" />
 						<p:commandButton  class="btn-icon"  icon="ui-icon-disk" title="Icon Only" />
 						
