--- a/WebContent/templates/modeloSitema.xhtml
+++ b/WebContent/templates/modeloSitema.xhtml
@@ -12,30 +12,37 @@
 </h:head>
 
 <h:body>
+<!-- 
 	<f:facet name="last">
+		<h:outputStylesheet library="css" name="theme.css" />
 		<h:outputStylesheet library="css" name="estilo.css" />
 	</f:facet>
+-->
 		<p:layout fullPage="true" >
-			<p:layoutUnit position="north" resizable="false"  size="70" collapsible="true" style="min-width:400px;">
+			<p:layoutUnit position="north" resizable="false"   collapsible="true" style="min-width:400px; min-height:80px;">
 				<i:insert name="banner" />
-					 
-					<div class="top">
-						<p:commandButton value="Logout" id="ajax"  styleClass="ui-priority-primary" />
-					</div>
+					
+					<div class="logo">
+					
+					</div> 
 					
 					<div class="btnAtalhos">
 					
-						<p:commandButton  class="btn-icon"  image="teste" title="Icon Only"/>
-						<p:commandButton  class="btn-icon"  icon="fa-home" title="Icon Only" />
-						<p:commandButton  class="btn-icon"  icon="ui-icon-disk" title="Icon Only" />
-						<p:commandButton  class="btn-icon"  icon="ui-icon-disk" title="Icon Only" />
+						<p:commandButton 	class="btn-atl"  icon="icon-aluno" 			title="Alunos" />
+						<p:commandButton  	class="btn-atl"  icon="icon-relatorio"  	title="Relatórios Alunos" />
+						<p:commandButton  	class="btn-atl"  icon="icon-contaReceber"  	title="Receber Mensalidade" />
+						<p:commandButton  	class="btn-atl"  icon="icon-configura" 		title="Configurações" />
 						
+					</div>
+					
+					<div class="top">
+						<p:commandButton value="Logout" id="ajax"  styleClass="ui-priority-primary" />
 					</div>
 				
 			</p:layoutUnit>
 	
 	
-			<p:layoutUnit position="west" header="Menu"  resizable="fasle" size="222">
+			<p:layoutUnit position="west" header="Menu" styleClass="menu-titulo" resizable="fasle" size="222">
 				<i:insert name="menu" />
 			</p:layoutUnit>
 	
