--- a/WebContent/templates/modeloPages.xhtml
+++ b/WebContent/templates/modeloPages.xhtml
@@ -8,23 +8,19 @@
 <h:head>
 	<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1" />
 	<title>Emavv</title>
-	<h:outputStylesheet library="css" name="theme.css" />
 	<h:outputScript library="js" name="scripts.js" />
 </h:head>
+
 <h:body>
-	<p:growl id="msgGlobal" life="3000" />
+	<f:facet name="last">
+		<h:outputStylesheet library="css" name="theme.css" />
+		<h:outputStylesheet library="css" name="estilo.css" />
+	</f:facet>
 
-	<p:layout fullPage="true">
+		<i:insert name="conteudo" />
 
-		<p:layoutUnit position="center">
-			<i:insert name="conteudo" />
-		</p:layoutUnit>
-		
-	</p:layout>
-	
-	<script>
+		<script>
 		$(".ui-dialog").appendTo("body");
-	</script>
-
+		</script>
 </h:body>
 </html>
