--- a/WebContent/include/menuSistema.xhtml
+++ b/WebContent/include/menuSistema.xhtml
@@ -57,9 +57,8 @@
 
 		<p:slideMenu class="menu-principal">
 			<p:submenu label="Aluno" icon="ui-icon-person">
-				<p:menuitem value="Novo" update="messages" icon="ui-icon-radio-on" target="frame-principal" url="teste.jsf"/>
-				<p:menuitem value="Matricula" update="messages"
-					icon="ui-icon-radio-on" />
+				<p:menuitem value="Novo"		update="messages" 	icon="ui-icon-radio-on" target="frame-principal" url="aluno/alunoCadastro.jsf"/>
+				<p:menuitem value="Matricula"	update="messages"	icon="ui-icon-radio-on"	target="frame-principal" url="aluno/alunoCadastro.jsf"/>
 			</p:submenu>
 
 			<p:submenu label="Cursos" icon="ui-icon-note	">
